complete sentences for comprehension

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -44,8 +44,8 @@
                     <h2>Alors pourquoi GIT ?</h2>
                     <ul>
                         <li>Performances</li>
-                        <li>Gestion des conflits</li>
-                        <li>Local repo</li>
+                        <li>Meilleures gestion des conflits</li>
+                        <li>Local repository</li>
                         <li>Gestion de l'historique</li>
                         <li>Actuellement le plus répandu (support et intégration)</li>
                     </ul>
