use fragments to display different uses of checkout step by step

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -31,14 +31,21 @@
                 </section>
                 <section>
                     <h2>Utiliser git</h2>
-                    <p>Annuler une modification de fichier</p>
-                    <code>git checkout</code>
-                    <p>changer de branche</p>
-                    <code>git checkout</code>
-                    <p>créer une branch</p>
-                    <code>git checkout</code>
-                    <h3>WTF ?!</h3>
-                    <p>Tiré de <a href="https://www.miximum.fr/blog/enfin-comprendre-git/">miximum.fr</a></p>
+                    <div class="fragment">
+                        <p>Annuler une modification de fichier</p>
+                        <code>git checkout ...</code>
+                    </div>
+                    <div class="fragment">
+                        <p>changer de branche</p>
+                        <code>git checkout ...</code>
+                    </div>
+                    <div class="fragment">
+                        <p>créer une branch</p>
+                        <code>git checkout ...</code>
+                    </div>
+                    <div class="fragment above">
+                        <img src="img/dafuq.jpg" alt="dafuq" class="unstyled">
+                    </div>
                 </section>          
                 <section>
                     <h2>Alors pourquoi GIT ?</h2>
