add slide content

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -51,6 +51,7 @@
                     <h2>Alors pourquoi GIT ?</h2>
                     <ul>
                         <li>Performances</li>
+                        <li>Structure de développement</li>
                         <li>Meilleures gestion des conflits</li>
                         <li>Local repository</li>
                         <li>Gestion de l'historique</li>
@@ -437,6 +438,7 @@
                     <code>git fetch [&lt;repo&gt; &lt;branch&gt;]</code>
                     <br/>
                     <h2>git pull</h2>
+                    <p>Pousse un objet local vers un repository</p>
                     <code>git pull [&lt;repo&gt; &lt;branch&gt;]</code>
                 </section>
                 <section>
