add pull request content

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -422,6 +422,16 @@
                         <li><a href="http://chris.beams.io/posts/git-commit/">Git-commit by Chris Beams</a></li>
                     </ul>
                 </section>
+                <section>
+                    <h2>Pull Requests</h2>
+                    <h1>TODO</h1>
+                    <ul>
+                        <li>Contrôle du bugfix ou feature selon la demande initiale</li>
+                        <li>Contrôle des tests</li>
+                        <li>Contrôle de la qualité de code (conventions, pattern, etc.)</li>
+                        <li>Contrôle des performances</li>
+                    </ul>
+                </section>
             </section>
             <section>
                 <section>
