good commit ref on the same slide

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -414,9 +414,8 @@
                         <li>Atomique : Il ne concerne qu'une seule chose</li>
                         <li>Petit : Il est le plus petit possible (mais cohérent)</li>
                     </ul>
-                </section>
-                <section>
-                    <h2>Lecture</h2>
+                    <br/>
+                    <h3>Ref.</h3>
                     <ul>
                         <li><a href="https://github.com/erlang/otp/wiki/writing-good-commit-messages">Writing good commit messages</a></li>
                         <li><a href="http://chris.beams.io/posts/git-commit/">Git-commit by Chris Beams</a></li>
