add aside notes

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -152,6 +152,10 @@
                             <caption>Versioning par fichier</caption>
                         </figure>
                     </div>
+                    <aside class="notes">
+                        Un snapshot dans le cas de git, c'est un état du système de fichier à l'instant T. Un snapshot est très léger
+                        et ainsi beaucoup plus efficient qu'un versioning de fichier, qui lui, recopie chaque fichier modifié.
+                    </aside>
                 </section>
                 <section>
                     <h2>Snapshot VS Version (2/2)</h2>
