change set attributs into brackets

--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -375,8 +375,8 @@
                     <p>Versionne le fichiers</p>
                     <ul>
                         <li>En local</li>
-                        <li>-m => ajoute un message (requis !)</li>
-                        <li>-a => ajoute tous les fichiers modifiés</li>
+                        <li>[-m] : ajoute un message (requis !)</li>
+                        <li>[-a] : ajoute tous les fichiers modifiés</li>
                     </ul>
                     <code>git commit &lt;filename&gt; [&lt;filename&gt;...] [-a|-m|...] [message]</code>
                 </section>                
