--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -29,8 +29,8 @@
                         <li>Mercurial</li>
                     </ul>
                     <p>Créé par Linus Torvalds (linux)</p>
-                    <aside class="notes">Git est un outil qui permet de versioner des fichiers. D'autres systèmes existent,
-                        on citera par exemple SVN qui était très répendu avant Git, mais aussi CVS ou Mercurial.
+                    <aside class="notes">Git est un outil qui permet de versioner des fichiers. D'autres systèmes similaires
+                        existent, on citera par exemple SVN qui était très répandu avant Git, mais aussi CVS ou Mercurial.
                         Git a été créé par Linus Torvalds, qui est également connu pour avoir créé le noyau linux.
                     </aside>
                 </section>
