--- a/git-intro/index.html
+++ b/git-intro/index.html
@@ -549,7 +549,7 @@
                     <ul>
                         <li>Atomique : Il ne concerne qu'une seule chose</li>
                         <li>Petit : Il est le plus petit possible (mais cohérent)</li>
-                        <li>Détaillé : Le commit message doit commencer par son type (fix, add, change, ...)</li>
+                        <li>Explicite : Le commit message doit commencer par son type (fix, add, change, ...)</li>
                         <li>Structuré : La 1ère ligne est un titre résumé, le reste un contenu détaillé</li>
                     </ul>
                     <br/>
