add logo for git philosophy chapter

--- a/git/index.html
+++ b/git/index.html
@@ -95,7 +95,7 @@
             <section>
                 <section>
                     <h1>Philosophie GIT</h1>
-                    <img src="img/" alt=""/>
+                    <img src="img/git-man-head.png" class="slide-logo" alt="Git philosophy"/>
                 </section>
                 <section>
                     <h2>Repository distribué</h2>
@@ -665,7 +665,7 @@
             dependencies: [
                 // Zoom in and out with [Alt]+[click]
                 { src: revealPlugins + 'zoom-js/zoom.js', async: true },
-                { src: revealPlugins + 'notes-server/client.js', async: true }
+                { src: revealPlugins + 'notes/notes.js', async: true }
             ],
             transition: 'convex'
         });
