add best practices for gitignore

--- a/git/index.html
+++ b/git/index.html
@@ -573,6 +573,18 @@
                     </aside>
                 </section>
                 <section>
+                    <h2>L'ignorance c'est bien</h2>
+                    <p>Utiliser le fichier .gitignore correctement en ignorant tout ce qui ne nécessite pas d'être versionné.</p>
+                    <ul>
+                        <li>Les fichiers utilisateurs (config perso d'IDE, de linter,...)</li>
+                        <li>Les fichiers sensibles (compte ftp,)</li>
+                        <li>Les fichiers buildés ou importés (ou pas...<em class="footnote-ref">*</em>)</li>
+                        <li>Les dossiers/fichiers temp</li>
+                        <li>Les dossiers/fichiers de cache</li>
+                    </ul>
+                    <p class="footnote"><em class="footnote-ref">*</em> A définir selon le projet. Dans certains cas, il peut être nécessaire de les versionner pour assurer la présence du fichier (pour l'<abbr title="Intégration Continue">IC</abbr> par exemple)</p>
+                </section>
+                <section>
                     <h2>Pull Requests</h2>
                     <h1>TODO</h1>
                     <ul>
