add a own slide for the mind-fuck img

--- a/git/index.html
+++ b/git/index.html
@@ -49,9 +49,6 @@
                         <p>créer une branch</p>
                         <code>git checkout ...</code>
                     </div>
-                    <div class="fragment above">
-                        <img src="img/dafuq.jpg" alt="dafuq" class="unstyled">
-                    </div>
                     <aside class="notes">
                         Git est difficile a appréhender pour les débutants face à d'autres système de versioning tel que SVN.
                         Il y'a plus d'étapes pour effectuer des actions simples comme un commit poussé, plus de commandes similaires
@@ -60,7 +57,12 @@
                         Le but de cette formation est donc de présenter le fonctionnement et l'utilisation de Git, mais aussi de
                         fournir quelques outils et bonnes pratiques afin d'augmenter l'efficacité de son utilisation.
                     </aside>
-                </section>          
+                </section>
+                
+                <section>
+                    <img src="img/out-the-window.gif" alt="Jump out the window" />
+                </section> 
+                         
                 <section>
                     <h2>Alors pourquoi GIT ?</h2>
                     <ul>
