improve text and titles

--- a/git/index.html
+++ b/git/index.html
@@ -67,7 +67,7 @@
                     <h2>Alors pourquoi GIT ?</h2>
                     <ul>
                         <li>Performances</li>
-                        <li>Structure de développement</li>
+                        <li>Structure de développement (branching)</li>
                         <li>Meilleures gestion des conflits</li>
                         <li>Local repository</li>
                         <li>Gestion de l'historique</li>
@@ -85,7 +85,7 @@
                         sont mieux géré par git que par ses concurrents. (Ex: pas de tree conflict svn)
                         - Local repository : Avoir un dépôt local, permet de transformer facilement n'importe quel projet en un projet versioné. Cela permet aussi
                         de faciliter les échanges en poussant directement nos versions vers un dépôt distant X ou Y.
-                        - Gestion de l'historique : L'utilisation de branches et les commandes tel que rebase, merge fast-forward, etc. permettent d'avoir un historique
+                        - Gestion de l'historique : L'utilisation de branches et les commandes tel que "rebase", "merge fast-forward", "add -p" etc. permettent d'avoir un historique
                         clair et fortement découplé en de nombreux commit léger, sans toutefois devoir ajouter des commit de fusion.
                         - Support et intégration : Git est actuellement l'outil de versioning le plus utilisé dans le monde Open Source et sur Internet. Pour cette
                         raison il est actuellement le plus souvent intégré nativement ou sous forme de plugin dans les IDE ou autres applications de développeurs (Sublime Text,
@@ -551,7 +551,7 @@
                     <h1>Bonnes pratiques</h1>
                 </section>
                 <section>
-                    <h2>Faire des Commit efficaces</h2>
+                    <h2>Commit efficaces</h2>
                     <h1>TODO</h1>
                     <ul>
                         <li>Atomique : Il ne concerne qu'une seule chose</li>
