--- a/git/index.html
+++ b/git/index.html
@@ -22,7 +22,7 @@
                     <h1>Qu'est-ce que GIT ?</h1>                    
                 </section>    
                 <section>
-                    <h2>Outil de versioning</h2>
+                    <h2>Système de gestion de version</h2>
                     <p>Similaire à :</p>
                     <ul>
                         <li>SVN</li>
@@ -664,10 +664,11 @@
                 <section>
                     <h2>Ressources Git</h2>
                     <ul>
-                        <li>Download : <a href="http://msysgit.github.io">msysgit.github.io</a></li>
+                        <li>Download git : <a href="http://msysgit.github.io">msysgit.github.io</a></li>
                         <li>Git book : <a href="http://git-scm.com/book/fr/v1">git-scm.com/book/fr/v1</a></li>
-                        <li>Tuto github : <a href="https://try.github.io">Try github.io</a></li>
+                        <li>Tuto github : <a href="https://try.github.io">try.github.io</a></li>
                         <li>Enfin comprendre git : <a href="https://www.miximum.fr/blog/enfin-comprendre-git/">www.miximum.fr</a></li>
+                        <li>Git Best Practices : <a href="https://sethrobertson.github.io/GitBestPractices/">sethrobertson.github.io</a></li>
                     </ul>
                 </section>
                 <section>
