--- a/git/index.html
+++ b/git/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>GIT Versioning</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" >
 	<link rel="stylesheet" type="text/css" href="../node_modules/reveal.js/css/reveal.css">
     <link rel="stylesheet" type="text/css" href="../node_modules/reveal.js/css/theme/black.css">
     <link rel="stylesheet" type="text/css" href="../node_modules/reveal.js/css/print/pdf.css" media="print">
