Add an example for a default hook

--- a/git/index.html
+++ b/git/index.html
@@ -214,6 +214,7 @@
                             </ul>
                         </li>
                     </ul>
+                    <p><u>Ex:</u> Default Hooks pour forcer un message de commit si aucun message n'est passé via [-m]</p>
                 </section>
             </section>
 
