add the option to manage the display of the slide notes

--- a/git/index.html
+++ b/git/index.html
@@ -684,6 +684,7 @@
     <script>
         var revealPlugins = '../node_modules/reveal.js/plugin/'
         Reveal.initialize({
+            showNotes: false,
             dependencies: [
                 // Zoom in and out with [Alt]+[click]
                 { src: revealPlugins + 'zoom-js/zoom.js', async: true },
