--- a/git/index.html
+++ b/git/index.html
@@ -42,11 +42,11 @@
                         <code>git checkout ...</code>
                     </div>
                     <div class="fragment">
-                        <p>changer de branche</p>
+                        <p>Changer de branche</p>
                         <code>git checkout ...</code>
                     </div>
                     <div class="fragment">
-                        <p>créer une branch</p>
+                        <p>Créer une branch</p>k
                         <code>git checkout ...</code>
                     </div>
                     <aside class="notes">
