git cmd documentation

--- a/git/index.html
+++ b/git/index.html
@@ -350,6 +350,16 @@
                     <h1>Les commandes de base</h1>
                     <img src="img/git-cmd-title.png" alt="git bash"/>
                 </section>
+                
+                <section>
+                    <h2>Help documentation</h2>
+                    <ul>
+                        <li><code class="inline">git &lt;verbe&gt; --help</code></li>
+                        <li><code class="inline">git help &lt;verbe&gt;</code></li>
+                        <li><code class="inline">man git-&lt;verbe&gt;</code></li>
+                    </ul>
+                </section>
+
                 <section>
                     <h2>git init</h2>
                     <p>Initialise un projet git local</p>
