--- a/git/index.html
+++ b/git/index.html
@@ -449,7 +449,7 @@
                 <section>
                     <h1>TODO</h1>
                     <h2>Branch</h2>
-                    <p>Interagit avec les branches</p>
+                    <p>Interagir avec les branches</p>
                     <ul>
                         <li>liste les branches</li>
                         <li>[-b] : créé une branche</li>
