--- a/git/index.html
+++ b/git/index.html
@@ -688,7 +688,8 @@
                     <ul>
                         <li>Download git : <a href="http://msysgit.github.io">msysgit.github.io</a></li>
                         <li>Git book : <a href="http://git-scm.com/book/fr/v1">git-scm.com/book/fr/v1</a></li>
-                        <li>Tuto github : <a href="https://try.github.io">try.github.io</a></li>
+                        <li>Atlassian tutoriel [EN] : <a href="https://www.atlassian.com/git/tutorials/what-is-version-control">www.atlassian.com</a></li>
+                        <li>Tuto github [EN] : <a href="https://try.github.io">try.github.io</a></li>
                         <li>Enfin comprendre git : <a href="https://www.miximum.fr/blog/enfin-comprendre-git/">www.miximum.fr</a></li>
                         <li>Git Best Practices : <a href="https://sethrobertson.github.io/GitBestPractices/">sethrobertson.github.io</a></li>
                     </ul>
